<resources>

    <string name="app_name">Android Homework</string>

    <string name="nameLabel">Введите имя:</string>
    <string name="emailLabel">Введите Email:</string>
    <string name="buttonLabel">Подписаться</string>
    <string name="clearLabel">Очистить</string>
    <string name="responseText">Подписка на рассылку успешно оформлена для пользователя %1$s на email: %2$s</string>

    <string name="amountLabel">Введите сумму:</string>
    <string name="infoLabel">Информация об оплате:</string>
    <string name="okLabel">OK</string>
    <string name="cardTypeLabel">С банковской карты</string>
    <string name="phoneTypeLabel">С мобильного телефона</string>
    <string name="addressTypeLabel">Наличными по адресу</string>
    <string name="successMessage">Оплата %1$d принята</string>

    <string name="btnLabel">Показать адрес</string>

    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белоруссия</item>
    </string-array>

    <string-array name="r_cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
    </string-array>

    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>

    <string-array name="b_cities">
        <item>Минск</item>
        <item>Гомель</item>
        <item>Торжок</item>
    </string-array>


    <string name="fromDateTimeLabel">Дата-время старта задачи:</string>
    <string name="toDateTimeLabel">Дата-время окончания задачи:</string>
    <string name="fromDateTimeLabelFormatted">Дата-время старта задачи: %1$s</string>
    <string name="toDateTimeLabelFormatted">Дата-время окончания задачи: %1$s</string>
    <string name="startLabel">старт: </string>
    <string name="endLabel"> окончаниe: </string>

    <string name="menuLabelSubscribe">Подписка</string>
    <string name="menuLabelCheckboxes">Чекбоксы</string>
    <string name="menuLabelSpinners">Спиннеры</string>
    <string name="menuLabelDateTime">Задачи</string>
    <string name="menuLabelNotepad">Записная книжка</string>
    <string name="menuLabelCalculator">Калькулятор</string>
    <string name="menuLabelLocale">Локализация</string>
    <string name="menuLabelList">Списки</string>
    <string name="menuLabelGeo">Поиск адреса</string>
    <string name="menuLabelPhone">Телефон</string>

    <string name="labelOne">1</string>
    <string name="labelTwo">2</string>
    <string name="labelThree">3</string>
    <string name="labelFour">4</string>
    <string name="labelFive">5</string>
    <string name="labelSix">6</string>
    <string name="labelSeven">7</string>
    <string name="labelEight">8</string>
    <string name="labelNine">9</string>
    <string name="labelZero">0</string>
    <string name="labelDot">.</string>
    <string name="labelC">C</string>
    <string name="labelSign">+/-</string>
    <string name="labelPercent">%</string>
    <string name="labelDivision">/</string>
    <string name="labelMultiplication">x</string>
    <string name="labelPlus">+</string>
    <string name="labelMinus">-</string>
    <string name="labelCompute">=</string>
    <string name="labelEngineer">...</string>
    <string name="labelSin">sin</string>
    <string name="labelCos">cos</string>
    <string name="labelTan">tan</string>
    <string name="labelExp">exp</string>

    <string-array name="languages">
        <item>Русский</item>
        <item>Украинский</item>
        <item>Английский</item>
    </string-array>

    <string-array name="themes">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Синий</item>
    </string-array>


    <string-array name="margins">
        <item>Мелкие</item>
        <item>Средние</item>
        <item>Большие</item>
    </string-array>

    <string name="languageText">
        С другой стороны начало повседневной работы по формированию позиции позволяет оценить значение систем массового участия. Задача организации, в особенности же реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности играет важную роль в формировании позиций, занимаемых участниками в отношении поставленных задач. С другой стороны укрепление и развитие структуры требуют от нас анализа форм развития.
    </string>

    <string name="noticeTitlePlaceholder">Заголовок:</string>
    <string name="noticeAddressPlaceholder">Адрес:</string>
    <string name="noticeDescriptionPlaceholder">Описание:</string>
    <string name="noticePricePlaceholder">Цена:</string>
    <string name="addTitle">Добавить</string>

    <string name="settingsTitle">Настройки</string>
    <string name="imagePathPlaceholder">Путь к картинке</string>

    <string name="loginPlaceholder">Логин:</string>
    <string name="passwordPlaceholder">Пароль:</string>
    <string name="loginLabel">Войти</string>
    <string name="registrationLabel">Регистрация</string>
    <string name="emptyFieldsMessage">Заполните все поля</string>
    <string name="registrationSuccessMessage">Вы успешно зарегистрированы!</string>
    <string name="incorrectLoginMessage">Неверный логин</string>
    <string name="incorrectPasswordMessage">Неверный пароль</string>

    <string name="loginSaveModeLabel">Хранить логин во внешнем хранилище</string>
    <string name="errorMessage">Произошла ошибка</string>

    <string name="addressPlaceholder">Введите адрес или координаты</string>
    <string name="searchLabel">Ищем</string>

    <string name="phoneNumberPlaceholder">Введите номер телефона</string>
    <string name="messagePlaceholder">Введите сообщение</string>

    <string name="callLabel">Звоним</string>
    <string name="sendLabel">Отправляем</string>

</resources>

