<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/calculatorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:padding="30dp"
        tools:text="0" />

    <LinearLayout
        android:id="@+id/actionsLine"
        android:layout_below="@id/calculatorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelC"
            android:textSize="36sp"
            />

        <Button
            android:id="@+id/btnSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelSign"
            android:textSize="36sp"
            />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelPercent"
            android:textSize="36sp"
            />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelDivision"
            android:textSize="36sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstLine"
        android:layout_below="@id/actionsLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelOne"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelTwo"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelThree"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelMultiplication"
            android:textSize="36sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLine"
        android:layout_below="@id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/labelFour"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/labelFive"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/labelSix"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelMinus"
            android:textSize="36sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLine"
        android:layout_below="@id/secondLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/labelSeven"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/labelEight"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/labelNine"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelPlus"
            android:textSize="36sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLine"
        android:layout_below="@+id/thirdLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/labelZero"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/labelDot"
            android:textSize="36sp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/btnCompute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelCompute"
            android:textSize="36sp"
            />

    </LinearLayout>

</RelativeLayout>