<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeFormActivity">

    <EditText
        android:id="@+id/edit_notice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noticeTitlePlaceholder"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/edit_notice_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noticeAddressPlaceholder"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_notice_title"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/edit_notice_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noticePricePlaceholder"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/edit_notice_address"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/edit_notice_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noticeDescriptionPlaceholder"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_notice_price"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btn_notice_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTitle"
        app:layout_constraintTop_toBottomOf="@id/edit_notice_description"

        />

</androidx.constraintlayout.widget.ConstraintLayout>