<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".PhoneActivity">

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/phoneNumberPlaceholder"
        android:inputType="phone"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/messagePlaceholder"
        app:layout_constraintTop_toBottomOf="@id/edit_phone_number" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/callLabel"
        app:layout_constraintTop_toBottomOf="@id/edit_message_text" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendLabel"
        app:layout_constraintTop_toBottomOf="@id/btn_call" />

</androidx.constraintlayout.widget.ConstraintLayout>